--- a/Cloudformation/root.yaml
+++ b/Cloudformation/root.yaml
@@ -51,6 +51,19 @@ Resources:
         vpc3PublicSubnetA: !GetAtt vpc3.Outputs.OutputPublicSubnetA
         routeTablePublic3: !GetAtt vpc3.Outputs.OutputRTPublic
 
+  ec2:
+    Type: AWS::CloudFormation::Stack
+    Properties:
+      TemplateURL: !Sub https://s3.amazonaws.com/${TemplateBucket}/testTG/ec2.yaml
+      Parameters:
+        ProjectName: !Ref ProjectName
+        vpc1: !GetAtt vpc1.Outputs.OutputVPC
+        vpc1PublicSubnetA: !GetAtt vpc1.Outputs.OutputPublicSubnetA
+        vpc2: !GetAtt vpc2.Outputs.OutputVPC
+        vpc2PublicSubnetA: !GetAtt vpc2.Outputs.OutputPublicSubnetA
+        vpc3: !GetAtt vpc3.Outputs.OutputVPC
+        vpc3PublicSubnetA: !GetAtt vpc3.Outputs.OutputPublicSubnetA
+
 # Outputs:
 #   # GLOBAL OUTPUTS
 #   EipBastion:
